--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-portofolio",
+  "homepage": "https://afiqalvadeano.github.io/react-portofolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,16 +8,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "jquery": "^3.6.0",
-    "react": "^18.2.0",
     "particles-bg": "^2.5.5",
+    "react": "^18.2.0",
+    "react-awesome-reveal": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.0",
-    "react-awesome-reveal": "^4.1.0",
     "react-scripts": "5.0.1",
     "react-zmage": "^0.8.5-beta.36",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
